fixed dropdown centralization and overflow on side

--- a/css/modules/Header.module.css
+++ b/css/modules/Header.module.css
@@ -70,6 +70,9 @@ strong.PET {
     font-size: 2rem;
     margin: 2px;
   }
+  .contact {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 768.9px) {
@@ -97,5 +100,11 @@ strong.PET {
     align-items: flex-start;
     font-size: 2rem;
     margin: 2px;
+  }
+  li {
+    margin: 0;
+  }
+  ul.navbar-nav li.nav-item {
+    margin: 0;
   }
 }
